--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <template id="searchPage">
       <van-sticky :offset-top="46">
         <van-search
-          v-model="searchKeyword"
+          v-model="currentKeyword"
           placeholder="请输入搜索内容"
           ref="search"
           @search="searchHistoryKeyword"
@@ -180,7 +180,7 @@
               <div v-if="deleting">
                 <span
                   style="color: var(--van-red);"
-                  @click="deleteAllHistoryKeyword"
+                  @click="deleteAllHistoryKeywords"
                 >
                   清空
                 </span>
@@ -285,6 +285,13 @@
           </van-cell>
         </van-cell-group>
       </van-space>
+      <van-notify
+        :show="showStock == 0"
+        type="warning"
+        style="top: 46px;"
+      >
+        <span>已售罄</span>
+      </van-notify>
       <van-action-bar>
         <van-action-bar-icon
           icon="cart-o"
@@ -296,6 +303,7 @@
         <van-action-bar-button
           type="danger"
           @click="showSpecPicker = true"
+          :disabled="showStock == 0"
         >
           加入购物车
         </van-action-bar-button>
@@ -336,8 +344,18 @@
         style="padding-bottom: 50px;"
       >
         <div style="text-align: right; margin: 10px;">
-          <span v-if="deleting" @click="deleting = false">完成</span>
-          <span v-else @click="deleting = true">编辑</span>
+          <span
+            v-if="deleting"
+            @click="quitDeleting"
+          >
+            完成
+          </span>
+          <span
+            v-else
+            @click="enterDeleting"
+          >
+            编辑
+          </span>
         </div>
         <van-swipe-cell
           v-for="(cartRecord, index) in cartList"
@@ -422,10 +440,10 @@
         </van-submit-bar>
         <van-submit-bar
           v-else
-          :price="$store.getters.totalPrice * 30"
-          :button-text="`生成订单(${$store.getters.totalSelectedAmount})`"
+          :price="$store.getters.totalSelectedPrice * 30"
+          :button-text="`确认(${$store.getters.totalSelectedAmount})`"
           style="bottom: 50px;"
-          @submit="exportOrder"
+          @submit="$router.push('/orderConfirm')"
         >
           <template #default>
             <van-checkbox
@@ -447,6 +465,40 @@
       </div>
     </template>
     <!-- 购物车页 END -->
+
+
+
+    <!-- 订单确认也 START -->
+    <template id="orderConfirmPage">
+      <div style="padding-bottom: 50px;">
+        <van-card
+          v-for="(cartRecord, index) in cartList"
+          :key="index"
+          :title="cartRecord.product.title"
+          :price="Number(cartRecord.option.price * 0.3).toFixed(2)"
+          :origin-price="Number(cartRecord.option.price).toFixed(2)"
+          :thumb="cartRecord.product.thumb"
+          lazy-load
+          style="margin: 10px; border-radius: 10px;"
+        >
+          <template #tags>
+            <van-tag
+              round
+              style="margin-top: 10px; padding: 3px 6px; background-color: var(--van-gray-2); color: #666;"
+            >
+              {{ cartRecord.option.title }}
+            </van-tag>
+          </template>
+        </van-card>
+        <van-submit-bar
+          :price="$store.getters.totalSelectedPrice * 30"
+          :button-text="`生成清单(${$store.getters.totalSelectedAmount})`"
+          @submit="exportOrder"
+        >
+        </van-submit-bar>
+      </div>
+    </template>
+    <!-- 订单确认也 END -->
 
 
 
@@ -589,6 +641,38 @@
           'shop-id': 1162,
         }
       });
+      const util = {
+        convertProduct(rawProduct) {
+          return {
+            id: Number(rawProduct.id),
+            title: rawProduct.title,
+            sub_title: rawProduct.sub_title,
+            thumb: rawProduct.thumb,
+            thumbs: rawProduct.thumbs,
+            sales_count: Number(rawProduct.sales_count),
+            specs: _.map(rawProduct.specs, spec => ({
+              id: Number(spec.id),
+              title: spec.title,
+              items: _.map(spec.items, item => ({
+                id: Number(item.id),
+                title: item.title,
+              }))
+            })),
+            options: _.map(_.values(rawProduct.options), option => {
+              return {
+                id: Number(option.id),
+                stock: Number(option.stock),
+                price: Number(option.price),
+                item_ids: _.map(_.sortBy(option.specs.split(',')), itemId => Number(itemId)),
+                title: option.option_title.join(','),
+              };
+            })
+          };
+        },
+        getOptionByItemIds(options, itemIds) {
+          return _.find(options, option => _.isEqual(_.sortBy(option.item_ids), _.sortBy(itemIds)));
+        }
+      };
 
 
 
@@ -636,14 +720,14 @@
           const historyKeywords = JSON.parse(window.localStorage.getItem('historyKeywords'));
           return {
             historyKeywords: _.isArray(historyKeywords) ? historyKeywords : [],
-            searchKeyword: '',
+            currentKeyword: '',
             deleting: false
           }
         },
         watch: {
           historyKeywords: {
             handler(value) {
-              localStorage.setItem('historyKeywords', JSON.stringify(value))
+              localStorage.setItem('historyKeywords', JSON.stringify(value));
             },
             deep: true
           }
@@ -653,7 +737,7 @@
             () => this.$route,
             () => {
               this.$refs.search.focus();
-              this.searchKeyword = this.keyword;
+              this.currentKeyword = this.keyword;
               this.$nextTick(() => {
                 const searchInput = this.$refs.search.$el.querySelector('input');
                 if (searchInput) {
@@ -681,8 +765,9 @@
             }
             this.historyKeywords = _.without(this.historyKeywords, historyKeyword);
           },
-          deleteAllHistoryKeyword() {
+          deleteAllHistoryKeywords() {
             this.historyKeywords = [];
+            this.deleting = false;
           }
         }
       };
@@ -765,40 +850,13 @@
               .then(response => {
                 this.showSpecPicker = true;
                 this.currentRecord = {
-                  product: this.convertProduct(response.data.data),
+                  product: util.convertProduct(response.data.data),
                   amount: 1,
                   option_id: 0,
                   option: {},
                   selectedItemIds: []
                 };
               });
-          },
-          convertProduct(rawProduct) {
-            return {
-              id: Number(rawProduct.id),
-              title: rawProduct.title,
-              sub_title: rawProduct.sub_title,
-              thumb: rawProduct.thumb,
-              thumbs: rawProduct.thumbs,
-              sales_count: Number(rawProduct.sales_count),
-              specs: _.map(rawProduct.specs, spec => ({
-                id: Number(spec.id),
-                title: spec.title,
-                items: _.map(spec.items, item => ({
-                  id: Number(item.id),
-                  title: item.title,
-                }))
-              })),
-              options: _.map(_.values(rawProduct.options), option => {
-                return {
-                  id: Number(option.id),
-                  stock: Number(option.stock),
-                  price: Number(option.price),
-                  item_ids: _.map(_.sortBy(option.specs.split(',')), itemId => Number(itemId)),
-                  title: option.option_title.join(','),
-                };
-              })
-            };
           },
           selectProductSpec(itemIds, amount, confirm) {
             if (!confirm) {
@@ -810,7 +868,7 @@
               vant.showToast('请选择完整规格');
               return;
             }
-            const selectedOption = _.find(this.currentRecord.product.options, option => _.isEqual(_.sortBy(option.item_ids), _.sortBy(this.currentRecord.selectedItemIds)));
+            const selectedOption = util.getOptionByItemIds(this.currentRecord.product.options, this.currentRecord.selectedItemIds);
             if (this.currentRecord.amount > selectedOption.stock) {
               vant.showToast('库存不足');
               return;
@@ -877,10 +935,7 @@
             return this.product.options.length === 0 ? 0 : _.sum(_.map(this.product.options, 'stock'));
           },
           selectedOption() {
-            if (this.selectedItemIds.length === 0 || this.selectedItemIds.length !== this.product.specs.length) {
-              return;
-            }
-            return _.find(this.product.options, option => _.isEqual(_.sortBy(option.item_ids), _.sortBy(this.selectedItemIds)));
+            return util.getOptionByItemIds(this.product.options, this.selectedItemIds);
           }
         },
         methods: {
@@ -889,35 +944,8 @@
             request.get(`/details-new?id=${this.productId}&activity_id=undefined`)
               .then(response => {
                 this.loading = false;
-                this.product = this.convertProduct(response.data.data);
+                this.product = util.convertProduct(response.data.data);
               });
-          },
-          convertProduct(rawProduct) {
-            return {
-              id: Number(rawProduct.id),
-              title: rawProduct.title,
-              sub_title: rawProduct.sub_title,
-              thumb: rawProduct.thumb,
-              thumbs: rawProduct.thumbs,
-              sales_count: Number(rawProduct.sales_count),
-              specs: _.map(rawProduct.specs, spec => ({
-                id: Number(spec.id),
-                title: spec.title,
-                items: _.map(spec.items, item => ({
-                  id: Number(item.id),
-                  title: item.title,
-                }))
-              })),
-              options: _.map(_.values(rawProduct.options), option => {
-                return {
-                  id: Number(option.id),
-                  stock: Number(option.stock),
-                  price: Number(option.price),
-                  item_ids: _.map(_.sortBy(option.specs.split(',')), itemId => Number(itemId)),
-                  title: option.option_title.join(','),
-                };
-              })
-            };
           },
           previewImage(startPosition) {
             vant.showImagePreview({
@@ -964,8 +992,9 @@
           cartList() {
             const rawCartList = this.$store.state.cartList;
             return _.map(rawCartList, item => {
-              item.option = _.find(item.product.options, option => option.id === item.option_id);
-              return item;
+              const cartRecord = _.cloneDeep(item);
+              cartRecord.option = _.find(cartRecord.product.options, option => option.id === cartRecord.option_id);
+              return cartRecord;
             });
           },
           isCheckAll() {
@@ -979,6 +1008,9 @@
           enterDeleting() {
             this.deleting = true;
             this.deletingIds = [];
+          },
+          quitDeleting() {
+            this.deleting = false;
           },
           isCheckedDeleting(id) {
             return _.includes(this.deletingIds, id);
@@ -1030,7 +1062,7 @@
               vant.showToast('请选择完整规格');
               return;
             }
-            const selectedOption = _.find(this.editingCartRecord.product.options, option => _.isEqual(_.sortBy(option.item_ids), _.sortBy(this.editingCartRecord.selectedItemIds)));
+            const selectedOption = util.getOptionByItemIds(this.editingCartRecord.product.options, this.editingCartRecord.selectedItemIds);
             if (this.editingCartRecord.amount > selectedOption.stock) {
               vant.showToast('库存不足');
               return;
@@ -1041,7 +1073,26 @@
               option_id: selectedOption.id,
             });
             vant.showSuccessToast('修改成功');
-          },
+          }
+        }
+      };
+
+
+
+      // 订单页
+      const orderConfirmPage = {
+        template: '#orderConfirmPage',
+        computed: {
+          cartList() {
+            const rawCartList = this.$store.state.cartList;
+            return _.map(_.filter(rawCartList, item => item.selected), item => {
+              const cartRecord = _.cloneDeep(item);
+              cartRecord.option = _.find(cartRecord.product.options, option => option.id === cartRecord.option_id);
+              return cartRecord;
+            });
+          }
+        },
+        methods: {
           async getBufferFromImageUrls(urls) {
             const promises = _.map(urls, url => axios.get(url, {
               responseType: 'arraybuffer',
@@ -1082,9 +1133,21 @@
                 header: '数量',
                 key: 'amount',
                 width: 10,
-              }
+              },
+              {
+                header: '小计（原价）',
+                key: 'price',
+                width: 20,
+              },
+              {
+                header: '小计（折后价）',
+                key: 'price',
+                width: 20,
+              },
             ];
             const selectedCartList = _.filter(this.cartList, cartRecord => cartRecord.selected);
+            const totalSelectedAmount = _.sum(_.map(selectedCartList, item => Number(item.amount)));
+            const totalSelectedPrice = _.sum(_.map(selectedCartList, cartRecord => Number(cartRecord.option.price) * Number(cartRecord.amount)));
             _.forEach(selectedCartList, cartRecord => {
               const row = worksheet.addRow([
                 '',
@@ -1093,9 +1156,22 @@
                 Number(cartRecord.option.price).toFixed(2),
                 Number(cartRecord.option.price * 0.3).toFixed(2),
                 cartRecord.amount,
+                Number(cartRecord.option.price * cartRecord.amount).toFixed(2),
+                Number(cartRecord.option.price * 0.3 * cartRecord.amount).toFixed(2)
               ]);
               row.height = 200;
             });
+            worksheet.addRow([
+              '合计',
+              '',
+              '',
+              '',
+              '',
+              totalSelectedAmount,
+              Number(totalSelectedPrice).toFixed(2),
+              Number(totalSelectedPrice * 0.3).toFixed(2),
+            ]);
+            worksheet.mergeCells(selectedCartList.length + 2, 1, selectedCartList.length + 2, 5);
             const buffers = await this.getBufferFromImageUrls(_.map(selectedCartList, cartRecord => cartRecord.product.thumb));
             _.forEach(buffers, (buffer, index) => {
               const imageId = workbook.addImage({
@@ -1116,7 +1192,7 @@
       };
 
 
-
+      
       // 商品规格选择器
       const productSpecPickerComponent = {
         template: '#productSpecPickerComponent',
@@ -1224,7 +1300,7 @@
               vant.showToast('请选择完整规格');
               return;
             }
-            const selectedOption = _.find(this.product.options, option => _.isEqual(_.sortBy(option.item_ids), _.sortBy(this.selectedItemIds)));
+            const selectedOption = util.getOptionByItemIds(this.product.options, this.selectedItemIds);
             if (this.amount > selectedOption.stock) {
               vant.showToast('库存不足');
               return;
@@ -1294,6 +1370,16 @@
               showBackTop: false,
             }
           },
+          {
+            path: '/orderConfirm',
+            component: orderConfirmPage,
+            meta: {
+              pageTitle: '确认订单',
+              pageBack: true,
+              showTabBar: false,
+              showBackTop: false,
+            }
+          },
         ]
       });
 
@@ -1319,7 +1405,7 @@
           totalSelectedAmount(state) {
             return _.sum(_.map(state.cartList, item => item.selected ? Number(item.amount) : 0));
           },
-          totalPrice(state) {
+          totalSelectedPrice(state) {
             return _.sum(_.map(state.cartList, item => {
               if (!item.selected) {
                 return 0;
@@ -1336,20 +1422,20 @@
               return item;
             });
           },
-          addCartRecord(state, cartRecord) {
-            if (!cartRecord.amount) {
+          addCartRecord(state, addData) {
+            if (!addData.amount) {
               return;
             }
-            const record = state.cartList.find(item => item.option_id === cartRecord.option_id);
-            if (record) {
-              if (typeof cartRecord.product !== 'undefined') {
-                record.product = cartRecord.product;
+            const cartRecord = state.cartList.find(item => item.option_id === addData.option_id);
+            if (cartRecord) {
+              if (typeof addData.product !== 'undefined') {
+                cartRecord.product = addData.product;
               }
-              record.amount += cartRecord.amount;
+              cartRecord.amount += addData.amount;
             } else {
-              cartRecord.id = generateUUID();
-              cartRecord.selected = true;
-              state.cartList.push(cartRecord);
+              addData.id = generateUUID();
+              addData.selected = true;
+              state.cartList.push(addData);
             }
           },
           deleteCartRecord(state, id) {
@@ -1359,21 +1445,21 @@
             if (!updateData.id) {
               return;
             }
-            const record = state.cartList.find(item => item.id === updateData.id);
-            if (!record) {
+            const cartRecord = state.cartList.find(item => item.id === updateData.id);
+            if (!cartRecord) {
               return;
             }
             if (typeof updateData.product !== 'undefined') {
-              record.product = updateData.product;
+              cartRecord.product = updateData.product;
             }
             if (typeof updateData.option_id !== 'undefined') {
-              record.option_id = updateData.option_id;
+              cartRecord.option_id = updateData.option_id;
             }
             if (typeof updateData.amount !== 'undefined') {
-              record.amount = updateData.amount;
+              cartRecord.amount = updateData.amount;
             }
             if (typeof updateData.selected !== 'undefined') {
-              record.selected = updateData.selected;
+              cartRecord.selected = updateData.selected;
             }
           },
         },
@@ -1382,16 +1468,16 @@
             commit('toggleCartCheckAll', selected);
             localStorage.setItem('cartList', JSON.stringify(this.state.cartList));
           },
-          addCartRecord({ commit }, cartRecord) {
-            commit('addCartRecord', cartRecord);
+          addCartRecord({ commit }, addData) {
+            commit('addCartRecord', addData);
             localStorage.setItem('cartList', JSON.stringify(this.state.cartList));
           },
           deleteCartRecord({ commit }, id) {
             commit('deleteCartRecord', id);
             localStorage.setItem('cartList', JSON.stringify(this.state.cartList));
           },
-          updateCartRecord({ commit }, cartRecord) {
-            commit('updateCartRecord', cartRecord);
+          updateCartRecord({ commit }, updateData) {
+            commit('updateCartRecord', updateData);
             localStorage.setItem('cartList', JSON.stringify(this.state.cartList));
           },
         }
