--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
             this.getCategoryList();
           },
           toSearch() {
-            this.$router.replace(`/search`);
+            this.$router.push(`/search`);
           }
         }
       };
