--- a/index.html
+++ b/index.html
@@ -1316,6 +1316,13 @@
       // 路由管理
       const router = VueRouter.createRouter({
         history: VueRouter.createWebHashHistory(),
+        scrollBehavior(to, from, savedPosition) {
+          if (savedPosition) {
+            return savedPosition;
+          } else {
+            return { top: 0 };
+          }
+        },
         routes: [
           {
             path: '/',
